Fix build warning on conditional fill in index.html.

--- a/index.html
+++ b/index.html
@@ -6,7 +6,13 @@ layout: code_for_new_orleans
   <ul>
     {% for page_item in site.pages %}
       {% if page_item.category == 'main_nav' %}
-        <li><a href='{{ page_item.url }}'>{{ page_item.menu_tag || page_item.title }}</li></a>
+        <li><a href='{{ page_item.url }}'>
+          {% if page_item.menu_tag %}
+            {{ page_item.menu_tag }}
+          {% else %}
+            {{ page_item.title }}
+          {% endif %}
+        </a></li>
       {% endif %}
     {% endfor %}
   </ul>
